--- a/Data Cleaning & Exploration - Human Resources.ipynb
+++ b/Data Cleaning & Exploration - Human Resources.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.397142Z",
-     "start_time": "2024-06-24T20:09:31.833461Z"
+     "end_time": "2024-06-30T14:57:53.113158Z",
+     "start_time": "2024-06-30T14:57:53.110984Z"
     }
    },
    "cell_type": "code",
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.406665Z",
-     "start_time": "2024-06-24T20:09:33.399031Z"
+     "end_time": "2024-06-30T14:57:53.142736Z",
+     "start_time": "2024-06-30T14:57:53.114045Z"
     }
    },
    "cell_type": "code",
@@ -60,8 +60,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.426036Z",
-     "start_time": "2024-06-24T20:09:33.408327Z"
+     "end_time": "2024-06-30T14:57:53.167307Z",
+     "start_time": "2024-06-30T14:57:53.145659Z"
     }
    },
    "cell_type": "code",
@@ -297,8 +297,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.439089Z",
-     "start_time": "2024-06-24T20:09:33.427151Z"
+     "end_time": "2024-06-30T14:57:53.180269Z",
+     "start_time": "2024-06-30T14:57:53.168537Z"
     }
    },
    "cell_type": "code",
@@ -361,23 +361,20 @@
    "execution_count": 4
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.445001Z",
-     "start_time": "2024-06-24T20:09:33.442472Z"
-    }
-   },
-   "cell_type": "code",
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "# Notes: \n",
-    "# manager_id needs to be converted to Int64.\n",
-    "# employee_name needs to be split into first and last_name.\n",
-    "# manager_name needs to be split into first and last name.\n",
-    "# All date fields need to be converted to standard SQL date format."
+    "Note:\n",
+    "\n",
+    "`manager_id` needs to be converted to Int64.\n",
+    "\n",
+    "`employee_name` needs to be split into first and last name.\n",
+    "\n",
+    "`manager_name` needs to be split into first and last name.\n",
+    "\n",
+    "All date fields need to be converted to standard date format.\n"
    ],
-   "id": "3f2c58759e1d4dbc",
-   "outputs": [],
-   "execution_count": 5
+   "id": "46647f1b74217f64"
   },
   {
    "metadata": {},
@@ -388,8 +385,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.479575Z",
-     "start_time": "2024-06-24T20:09:33.446047Z"
+     "end_time": "2024-06-30T14:57:53.212849Z",
+     "start_time": "2024-06-30T14:57:53.181482Z"
     }
    },
    "cell_type": "code",
@@ -672,12 +669,12 @@
        "</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -688,8 +685,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.486626Z",
-     "start_time": "2024-06-24T20:09:33.481013Z"
+     "end_time": "2024-06-30T14:57:53.219593Z",
+     "start_time": "2024-06-30T14:57:53.214004Z"
     }
    },
    "cell_type": "code",
@@ -738,6 +735,52 @@
        "dtype: int64"
       ]
      },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "There are no missing values found in this dataset except for `date_of_termination` which should be left alone as it represents whether an employee was terminated or not.",
+   "id": "6ddcc483c47b64f8"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Data Cleaning",
+   "id": "5e595b15038866c1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Original row count: 311",
+   "id": "3940860e644f90da"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-30T14:57:53.229118Z",
+     "start_time": "2024-06-30T14:57:53.220869Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Drop duplicates\n",
+    "hr.drop_duplicates(inplace=True)\n",
+    "hr.shape"
+   ],
+   "id": "64d3da270d7048bd",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(311, 36)"
+      ]
+     },
      "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
@@ -748,57 +791,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.491162Z",
-     "start_time": "2024-06-24T20:09:33.488291Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "# There are no missing values found in this dataset except for date_of_termination which should be left alone as it represents whether an employee was terminated or not.",
-   "id": "ea21f692b8de45d1",
-   "outputs": [],
-   "execution_count": 8
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "# Data Cleaning",
-   "id": "5e595b15038866c1"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.499204Z",
-     "start_time": "2024-06-24T20:09:33.492445Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# Original row amount: 311\n",
-    "\n",
-    "# Drop duplicates\n",
-    "hr = hr.drop_duplicates()\n",
-    "hr.shape"
-   ],
-   "id": "b32488485a01f932",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(311, 36)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.508877Z",
-     "start_time": "2024-06-24T20:09:33.501216Z"
+     "end_time": "2024-06-30T14:57:53.234921Z",
+     "start_time": "2024-06-30T14:57:53.230239Z"
     }
    },
    "cell_type": "code",
@@ -816,18 +810,18 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.515447Z",
-     "start_time": "2024-06-24T20:09:33.510582Z"
+     "end_time": "2024-06-30T14:57:53.240098Z",
+     "start_time": "2024-06-30T14:57:53.235853Z"
     }
    },
    "cell_type": "code",
@@ -863,18 +857,18 @@
        "Name: manager_id, dtype: Int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.521507Z",
-     "start_time": "2024-06-24T20:09:33.516759Z"
+     "end_time": "2024-06-30T14:57:53.245399Z",
+     "start_time": "2024-06-30T14:57:53.241323Z"
     }
    },
    "cell_type": "code",
@@ -900,18 +894,18 @@
        "Name: employee_name, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.535037Z",
-     "start_time": "2024-06-24T20:09:33.523370Z"
+     "end_time": "2024-06-30T14:57:53.255079Z",
+     "start_time": "2024-06-30T14:57:53.247207Z"
     }
    },
    "cell_type": "code",
@@ -1037,18 +1031,18 @@
        "</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.547307Z",
-     "start_time": "2024-06-24T20:09:33.539251Z"
+     "end_time": "2024-06-30T14:57:53.268852Z",
+     "start_time": "2024-06-30T14:57:53.258856Z"
     }
    },
    "cell_type": "code",
@@ -1174,18 +1168,18 @@
        "</div>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.552902Z",
-     "start_time": "2024-06-24T20:09:33.549208Z"
+     "end_time": "2024-06-30T14:57:53.273269Z",
+     "start_time": "2024-06-30T14:57:53.269930Z"
     }
    },
    "cell_type": "code",
@@ -1195,13 +1189,13 @@
    ],
    "id": "f96387b238f1fafe",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.558173Z",
-     "start_time": "2024-06-24T20:09:33.554098Z"
+     "end_time": "2024-06-30T14:57:53.279063Z",
+     "start_time": "2024-06-30T14:57:53.274531Z"
     }
    },
    "cell_type": "code",
@@ -1228,18 +1222,18 @@
        "Name: manager_name, Length: 311, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.568550Z",
-     "start_time": "2024-06-24T20:09:33.559257Z"
+     "end_time": "2024-06-30T14:57:53.287760Z",
+     "start_time": "2024-06-30T14:57:53.280248Z"
     }
    },
    "cell_type": "code",
@@ -1365,18 +1359,18 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.575466Z",
-     "start_time": "2024-06-24T20:09:33.569469Z"
+     "end_time": "2024-06-30T14:57:53.307426Z",
+     "start_time": "2024-06-30T14:57:53.288758Z"
     }
    },
    "cell_type": "code",
@@ -1393,18 +1387,18 @@
        "Name: manager_last_name, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.617514Z",
-     "start_time": "2024-06-24T20:09:33.576612Z"
+     "end_time": "2024-06-30T14:57:53.314779Z",
+     "start_time": "2024-06-30T14:57:53.308582Z"
     }
    },
    "cell_type": "code",
@@ -1432,18 +1426,18 @@
        "Name: manager_last_name, Length: 311, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.622326Z",
-     "start_time": "2024-06-24T20:09:33.618541Z"
+     "end_time": "2024-06-30T14:57:53.319541Z",
+     "start_time": "2024-06-30T14:57:53.316423Z"
     }
    },
    "cell_type": "code",
@@ -1453,13 +1447,13 @@
    ],
    "id": "bad692d01aa19a43",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.633379Z",
-     "start_time": "2024-06-24T20:09:33.623808Z"
+     "end_time": "2024-06-30T14:57:53.328594Z",
+     "start_time": "2024-06-30T14:57:53.320716Z"
     }
    },
    "cell_type": "code",
@@ -1609,18 +1603,18 @@
        "</div>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.666125Z",
-     "start_time": "2024-06-24T20:09:33.634766Z"
+     "end_time": "2024-06-30T14:57:53.354781Z",
+     "start_time": "2024-06-30T14:57:53.330213Z"
     }
    },
    "cell_type": "code",
@@ -1637,18 +1631,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/47/pzhx21jn1c3dwfyd9xj6jym40000gn/T/ipykernel_6713/3949358344.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  hr_dataset['date_of_birth'] = pd.to_datetime(hr_dataset['date_of_birth'], errors='coerce')\n"
+      "/var/folders/47/pzhx21jn1c3dwfyd9xj6jym40000gn/T/ipykernel_4487/422218453.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  hr['date_of_birth'] = pd.to_datetime(hr['date_of_birth'], errors='coerce')\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.673188Z",
-     "start_time": "2024-06-24T20:09:33.667970Z"
+     "end_time": "2024-06-30T14:57:53.361927Z",
+     "start_time": "2024-06-30T14:57:53.356889Z"
     }
    },
    "cell_type": "code",
@@ -1668,18 +1662,18 @@
        "dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.684637Z",
-     "start_time": "2024-06-24T20:09:33.674726Z"
+     "end_time": "2024-06-30T14:57:53.370952Z",
+     "start_time": "2024-06-30T14:57:53.363301Z"
     }
    },
    "cell_type": "code",
@@ -1829,18 +1823,18 @@
        "</div>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.705140Z",
-     "start_time": "2024-06-24T20:09:33.686265Z"
+     "end_time": "2024-06-30T14:57:53.385337Z",
+     "start_time": "2024-06-30T14:57:53.372532Z"
     }
    },
    "cell_type": "code",
@@ -1943,31 +1937,24 @@
        "</div>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 25
+   "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "`date_of_birth` has an abnormal date range. Remove dates that have years after the current year.",
+   "id": "a771755de1f8f3"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:09:33.708564Z",
-     "start_time": "2024-06-24T20:09:33.706232Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "# Note: date_of_birth has an abnormal date range. Remove dates that have years after the current year.",
-   "id": "b8ee17a0c50b7d8e",
-   "outputs": [],
-   "execution_count": 26
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-24T20:10:06.028116Z",
-     "start_time": "2024-06-24T20:10:06.019046Z"
+     "end_time": "2024-06-30T14:57:53.391007Z",
+     "start_time": "2024-06-30T14:57:53.386453Z"
     }
    },
    "cell_type": "code",
@@ -1985,13 +1972,13 @@
    ],
    "id": "e6c980c6a79df32a",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:10:06.730895Z",
-     "start_time": "2024-06-24T20:10:06.726041Z"
+     "end_time": "2024-06-30T14:57:53.396628Z",
+     "start_time": "2024-06-30T14:57:53.392159Z"
     }
    },
    "cell_type": "code",
@@ -2008,18 +1995,18 @@
        "dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-24T20:10:17.060507Z",
-     "start_time": "2024-06-24T20:10:17.055377Z"
+     "end_time": "2024-06-30T14:57:53.403125Z",
+     "start_time": "2024-06-30T14:57:53.398048Z"
     }
    },
    "cell_type": "code",
@@ -2042,12 +2029,12 @@
        "Name: date_of_birth, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 30
+   "execution_count": 26
   },
   {
    "metadata": {},
