--- a/Data Cleaning & Exploration - Human Resources.ipynb
+++ b/Data Cleaning & Exploration - Human Resources.ipynb
@@ -366,13 +366,13 @@
    "source": [
     "Note:\n",
     "\n",
-    "`manager_id` needs to be converted to Int64.\n",
+    "`manager_id` needs to be converted to **Int64**.\n",
     "\n",
     "`employee_name` needs to be split into first and last name.\n",
     "\n",
     "`manager_name` needs to be split into first and last name.\n",
     "\n",
-    "All date fields need to be converted to standard date format.\n"
+    "All date fields need to be converted to standard **datetime** format.\n"
    ],
    "id": "46647f1b74217f64"
   },
@@ -755,12 +755,6 @@
    "id": "5e595b15038866c1"
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "Original row count: 311",
-   "id": "3940860e644f90da"
-  },
-  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-06-30T14:57:53.229118Z",
@@ -787,6 +781,12 @@
     }
    ],
    "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Original row count: 311",
+   "id": "3940860e644f90da"
   },
   {
    "metadata": {
