--- a/Data Cleaning & Exploration - Human Resources.ipynb
+++ b/Data Cleaning & Exploration - Human Resources.ipynb
@@ -9,14 +9,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Import Libraries",
+   "source": "# Import Libraries",
    "id": "7f7b085db3a3203b"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.113158Z",
-     "start_time": "2024-06-30T14:57:53.110984Z"
+     "end_time": "2024-07-04T19:03:21.096974Z",
+     "start_time": "2024-07-04T19:03:18.691130Z"
     }
    },
    "cell_type": "code",
@@ -32,14 +32,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Load Dataset",
+   "source": "# Load Dataset",
    "id": "a5de30817730ccbf"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.142736Z",
-     "start_time": "2024-06-30T14:57:53.114045Z"
+     "end_time": "2024-07-04T19:03:21.113172Z",
+     "start_time": "2024-07-04T19:03:21.098632Z"
     }
    },
    "cell_type": "code",
@@ -54,14 +54,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Initial Data Inspection",
+   "source": "# Initial Data Inspection",
    "id": "44884aabd6eb7ed4"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.167307Z",
-     "start_time": "2024-06-30T14:57:53.145659Z"
+     "end_time": "2024-07-04T19:03:21.133868Z",
+     "start_time": "2024-07-04T19:03:21.114177Z"
     }
    },
    "cell_type": "code",
@@ -297,8 +297,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.180269Z",
-     "start_time": "2024-06-30T14:57:53.168537Z"
+     "end_time": "2024-07-04T19:03:21.148197Z",
+     "start_time": "2024-07-04T19:03:21.134918Z"
     }
    },
    "cell_type": "code",
@@ -385,8 +385,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.212849Z",
-     "start_time": "2024-06-30T14:57:53.181482Z"
+     "end_time": "2024-07-04T19:03:21.186221Z",
+     "start_time": "2024-07-04T19:03:21.150890Z"
     }
    },
    "cell_type": "code",
@@ -685,8 +685,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.219593Z",
-     "start_time": "2024-06-30T14:57:53.214004Z"
+     "end_time": "2024-07-04T19:03:21.192666Z",
+     "start_time": "2024-07-04T19:03:21.187265Z"
     }
    },
    "cell_type": "code",
@@ -757,8 +757,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.229118Z",
-     "start_time": "2024-06-30T14:57:53.220869Z"
+     "end_time": "2024-07-04T19:03:21.204145Z",
+     "start_time": "2024-07-04T19:03:21.194388Z"
     }
    },
    "cell_type": "code",
@@ -791,8 +791,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.234921Z",
-     "start_time": "2024-06-30T14:57:53.230239Z"
+     "end_time": "2024-07-04T19:03:21.210732Z",
+     "start_time": "2024-07-04T19:03:21.205469Z"
     }
    },
    "cell_type": "code",
@@ -820,8 +820,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.240098Z",
-     "start_time": "2024-06-30T14:57:53.235853Z"
+     "end_time": "2024-07-04T19:03:21.217951Z",
+     "start_time": "2024-07-04T19:03:21.212687Z"
     }
    },
    "cell_type": "code",
@@ -867,8 +867,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.245399Z",
-     "start_time": "2024-06-30T14:57:53.241323Z"
+     "end_time": "2024-07-04T19:03:21.224185Z",
+     "start_time": "2024-07-04T19:03:21.219602Z"
     }
    },
    "cell_type": "code",
@@ -904,8 +904,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.255079Z",
-     "start_time": "2024-06-30T14:57:53.247207Z"
+     "end_time": "2024-07-04T19:03:21.234411Z",
+     "start_time": "2024-07-04T19:03:21.225102Z"
     }
    },
    "cell_type": "code",
@@ -1041,8 +1041,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.268852Z",
-     "start_time": "2024-06-30T14:57:53.258856Z"
+     "end_time": "2024-07-04T19:03:21.243423Z",
+     "start_time": "2024-07-04T19:03:21.235766Z"
     }
    },
    "cell_type": "code",
@@ -1178,8 +1178,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.273269Z",
-     "start_time": "2024-06-30T14:57:53.269930Z"
+     "end_time": "2024-07-04T19:03:21.248497Z",
+     "start_time": "2024-07-04T19:03:21.244832Z"
     }
    },
    "cell_type": "code",
@@ -1194,8 +1194,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.279063Z",
-     "start_time": "2024-06-30T14:57:53.274531Z"
+     "end_time": "2024-07-04T19:03:21.257081Z",
+     "start_time": "2024-07-04T19:03:21.252797Z"
     }
    },
    "cell_type": "code",
@@ -1232,8 +1232,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.287760Z",
-     "start_time": "2024-06-30T14:57:53.280248Z"
+     "end_time": "2024-07-04T19:03:21.266065Z",
+     "start_time": "2024-07-04T19:03:21.258184Z"
     }
    },
    "cell_type": "code",
@@ -1369,8 +1369,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.307426Z",
-     "start_time": "2024-06-30T14:57:53.288758Z"
+     "end_time": "2024-07-04T19:03:21.272843Z",
+     "start_time": "2024-07-04T19:03:21.267084Z"
     }
    },
    "cell_type": "code",
@@ -1397,8 +1397,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.314779Z",
-     "start_time": "2024-06-30T14:57:53.308582Z"
+     "end_time": "2024-07-04T19:03:21.280798Z",
+     "start_time": "2024-07-04T19:03:21.275039Z"
     }
    },
    "cell_type": "code",
@@ -1436,8 +1436,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.319541Z",
-     "start_time": "2024-06-30T14:57:53.316423Z"
+     "end_time": "2024-07-04T19:03:21.285880Z",
+     "start_time": "2024-07-04T19:03:21.281966Z"
     }
    },
    "cell_type": "code",
@@ -1452,8 +1452,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.328594Z",
-     "start_time": "2024-06-30T14:57:53.320716Z"
+     "end_time": "2024-07-04T19:03:21.294195Z",
+     "start_time": "2024-07-04T19:03:21.287002Z"
     }
    },
    "cell_type": "code",
@@ -1613,8 +1613,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.354781Z",
-     "start_time": "2024-06-30T14:57:53.330213Z"
+     "end_time": "2024-07-04T19:03:21.322691Z",
+     "start_time": "2024-07-04T19:03:21.295267Z"
     }
    },
    "cell_type": "code",
@@ -1631,7 +1631,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/47/pzhx21jn1c3dwfyd9xj6jym40000gn/T/ipykernel_4487/422218453.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/47/pzhx21jn1c3dwfyd9xj6jym40000gn/T/ipykernel_3800/422218453.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  hr['date_of_birth'] = pd.to_datetime(hr['date_of_birth'], errors='coerce')\n"
      ]
     }
@@ -1641,8 +1641,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.361927Z",
-     "start_time": "2024-06-30T14:57:53.356889Z"
+     "end_time": "2024-07-04T19:03:21.328477Z",
+     "start_time": "2024-07-04T19:03:21.323829Z"
     }
    },
    "cell_type": "code",
@@ -1672,8 +1672,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.370952Z",
-     "start_time": "2024-06-30T14:57:53.363301Z"
+     "end_time": "2024-07-04T19:03:21.338002Z",
+     "start_time": "2024-07-04T19:03:21.329765Z"
     }
    },
    "cell_type": "code",
@@ -1833,8 +1833,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.385337Z",
-     "start_time": "2024-06-30T14:57:53.372532Z"
+     "end_time": "2024-07-04T19:03:21.353630Z",
+     "start_time": "2024-07-04T19:03:21.339047Z"
     }
    },
    "cell_type": "code",
@@ -1953,8 +1953,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.391007Z",
-     "start_time": "2024-06-30T14:57:53.386453Z"
+     "end_time": "2024-07-04T19:03:28.047145Z",
+     "start_time": "2024-07-04T19:03:28.037338Z"
     }
    },
    "cell_type": "code",
@@ -1962,10 +1962,10 @@
     "# Replace years in date of birth column that are after the current year with NaT\n",
     "\n",
     "# Import datetime package\n",
-    "import datetime\n",
+    "from datetime import datetime\n",
     "\n",
     "# Get the current year\n",
-    "current_year = datetime.datetime.now().year\n",
+    "current_year = datetime.now().year\n",
     "\n",
     "# Replace all years that are after the current year with NaT\n",
     "hr.loc[hr['date_of_birth'].dt.year > current_year, 'date_of_birth'] = pd.NaT"
@@ -1977,8 +1977,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.396628Z",
-     "start_time": "2024-06-30T14:57:53.392159Z"
+     "end_time": "2024-07-04T19:03:30.412793Z",
+     "start_time": "2024-07-04T19:03:30.408473Z"
     }
    },
    "cell_type": "code",
@@ -2005,8 +2005,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-30T14:57:53.403125Z",
-     "start_time": "2024-06-30T14:57:53.398048Z"
+     "end_time": "2024-07-04T19:03:35.163933Z",
+     "start_time": "2024-07-04T19:03:35.158793Z"
     }
    },
    "cell_type": "code",
