--- a/Data Cleaning & Exploration - Human Resources.ipynb
+++ b/Data Cleaning & Exploration - Human Resources.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "code",
    "source": [
     "# Import dataset\n",
-    "hr = pd.read_csv('/Users/raheem-gsu/DataGripProjects/MYSQL-Tableau-Human-Resources-Project/Datasets/hr_dataset_v14.csv')"
+    "hr = pd.read_csv('/Users/raheem-gsu/Documents/Github Portfolio Projects/Employee-Data-Analysis/Datasets/hr_dataset_v14.csv')"
    ],
    "id": "66e1a03a178ffc58",
    "outputs": [],
